[package]
name = "termion"
version = "1.1.3"
authors = ["ticki <Ticki@users.noreply.github.com>", "gycos <alexandre.bury@gmail.com>"]
description = "A bindless library for manipulating terminals."
repository = "https://github.com/ticki/termion"
documentation = "https://docs.rs/termion"
license = "MIT"
keywords = ["tty", "color", "terminal", "password", "tui"]
exclude = ["target", "CHANGELOG.md", "image.png", "Cargo.lock"]

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2.8"
