[package]
name = "termion"
version = "1.3.0"
authors = ["ticki <Ticki@users.noreply.github.com>", "gycos <alexandre.bury@gmail.com>", "IGI-111 <igi-111@protonmail.com>"]
description = "A bindless library for manipulating terminals."
repository = "https://github.com/ticki/termion"
documentation = "https://docs.rs/termion"
license = "MIT"
keywords = ["tty", "color", "terminal", "password", "tui"]
exclude = ["target", "CHANGELOG.md", "image.png", "Cargo.lock"]

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2.8"

[library]
name = "libterm"

[[bin]]
name = "simple"
path = "examples/simple.rs"

[[bin]]
name = "read"
path = "examples/read.rs"

[[bin]]
name = "size"
path = "examples/size.rs"
