[package]
name = "termion"
version = "4.0.3"
edition = "2021"
authors = [
    "ticki <Ticki@users.noreply.github.com>",
    "gycos <alexandre.bury@gmail.com>",
    "IGI-111 <igi-111@protonmail.com>",
    "Jeremy Soller <jackpot51@gmail.com>",
]
description = "A bindless library for manipulating terminals."
repository = "https://gitlab.redox-os.org/redox-os/termion"
documentation = "https://docs.rs/termion"
license = "MIT"
keywords = ["tty", "color", "terminal", "password", "tui"]
exclude = ["target", "CHANGELOG.md", "image.png", "Cargo.lock"]

[dependencies]
numtoa = { version = "0.2.4" }
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_termios = "0.1.3"
libredox = "0.1.3"
